fixed invisible checkboxes showing for Mozilla

--- a/src/css/catalog-page.css
+++ b/src/css/catalog-page.css
@@ -499,8 +499,15 @@
 
 /* accordion */
 .filter-criteria__accordion-checkbox {
+  position: relative;
+  top: -9999px;
+  left: -9999px;
+  z-index: -100;
   width: 0;
   height: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
 } 
 
 .filter-criteria_accordion .filter-criteria__accordion-click-wrapper {
